# HWC-Mobile-App

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  README.md  build.gradle  env.example  gradle.properties  settings.gradle  setup.sh  versioning.gradle
.github/ISSUE_TEMPLATE/: DMP_2024.yml
.github/workflows/: android.yml  build-distribute.yml  hwc-android-build.yml
.gradle-local/wrapper/dists/gradle-8.4-bin/1w5dpkrfk8irigvoxmyhowfim/: gradle-8.4-bin.zip.part
FirebaseAppDistributionConfig/: groups.txt  release_notes.txt
app/: .gitignore  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: examination_form.json  location_information.json  new-patient-registration-paginated.json  other_information.json  patient-visit-details-paginated.json  prescription_form.json  response.json  revisit_form.json  vitals-page.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.cpp.example
app/src/main/jniLibs/arm64-v8a/: gdb.setup
app/src/main/jniLibs/armeabi-v7a/: gdb.setup
app/src/main/jniLibs/x86/: gdb.setup
app/src/main/jniLibs/x86_64/: gdb.setup  gdbserver
app/src/main/res/color/: bottom_navigation_item_background.xml  bottom_navigation_text_color.xml  box_stroke_color.xml
app/src/main/res/drawable/: baseline_lab.xml  (+134 more)
app/src/staging/: google-services.json
docs/: CICDSetup.md  SecureConfigNativeCode.md
dummy/: google-services.json
fastlane/: .gitignore  Appfile  Fastfile  Pluginfile  README.md
gradle/wrapper/: gradle-wrapper.properties
pipelines/: build_apk.yml
version/: version.properties
(+1081 files in other folders)
